--- a/package.json
+++ b/package.json
@@ -3,27 +3,35 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "tsc && vite build && vite build --ssr"
-    },
-    "devDependencies": {
-        "@headlessui/react": "^2.0.0",
-        "@inertiajs/react": "^1.0.0",
-        "@tailwindcss/forms": "^0.5.3",
-        "@types/node": "^18.13.0",
-        "@types/react": "^18.0.28",
-        "@types/react-dom": "^18.0.10",
-        "@vitejs/plugin-react": "^4.2.0",
-        "autoprefixer": "^10.4.12",
-        "axios": "^1.7.4",
-        "laravel-vite-plugin": "^1.0",
-        "postcss": "^8.4.31",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "tailwindcss": "^3.2.1",
-        "typescript": "^5.0.2",
-        "vite": "^5.0"
+        "build": "tsc && vite build && vite build --ssr",
+        "shadcn": "shadcn"
     },
     "dependencies": {
-        "dayjs": "^1.11.13"
+        "@headlessui/react": "^2.1.9",
+        "@inertiajs/react": "^1.2.0",
+        "@radix-ui/react-icons": "^1.3.0",
+        "@radix-ui/react-select": "^2.1.2",
+        "@radix-ui/react-slot": "^1.1.0",
+        "@tailwindcss/forms": "^0.5.9",
+        "@types/node": "^18.19.54",
+        "@types/react": "^18.3.11",
+        "@types/react-dom": "^18.3.0",
+        "@vitejs/plugin-react": "^4.3.2",
+        "autoprefixer": "^10.4.20",
+        "axios": "^1.7.7",
+        "class-variance-authority": "^0.7.0",
+        "clsx": "^2.1.1",
+        "dayjs": "^1.11.13",
+        "laravel-vite-plugin": "^1.0.5",
+        "lucide-react": "^0.447.0",
+        "postcss": "^8.4.47",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
+        "shadcn": "^2.1.0",
+        "tailwind-merge": "^2.5.3",
+        "tailwindcss": "^3.4.13",
+        "tailwindcss-animate": "^1.0.7",
+        "typescript": "^5.6.2",
+        "vite": "^5.4.8"
     }
 }
