--- a/02_rails-inertia-react/Gemfile
+++ b/02_rails-inertia-react/Gemfile
@@ -53,3 +53,9 @@ group :test do
   gem "capybara"
   gem "selenium-webdriver"
 end
+
+gem "inertia_rails", "~> 3.4"
+
+gem "inertia_rails-contrib", "~> 0.3.0"
+
+gem "vite_rails", "~> 3.0"
