--- a/02_rails-inertia-react/config/queue.yml
+++ b/02_rails-inertia-react/config/queue.yml
@@ -1,18 +1,18 @@
 default: &default
-  dispatchers:
-    - polling_interval: 1
-      batch_size: 500
-  workers:
-    - queues: "*"
-      threads: 3
-      processes: <%= ENV.fetch("JOB_CONCURRENCY", 1) %>
-      polling_interval: 0.1
+    dispatchers:
+        - polling_interval: 1
+          batch_size: 500
+    workers:
+        - queues: '*'
+          threads: 3
+          processes: <%= ENV.fetch("JOB_CONCURRENCY", 1) %>
+          polling_interval: 0.1
 
 development:
-  <<: *default
+    <<: *default
 
 test:
-  <<: *default
+    <<: *default
 
 production:
-  <<: *default
+    <<: *default
