--- a/02_rails-inertia-react/package.json
+++ b/02_rails-inertia-react/package.json
@@ -1,23 +1,29 @@
 {
-  "private": true,
-  "type": "module",
-  "devDependencies": {
-    "vite": "^5.4.11",
-    "vite-plugin-ruby": "^5.1.1"
-  },
-  "dependencies": {
-    "@inertiajs/react": "^1.2.0",
-    "@tailwindcss/container-queries": "^0.1.1",
-    "@tailwindcss/forms": "^0.5.9",
-    "@tailwindcss/typography": "^0.5.15",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "@vitejs/plugin-react": "^4.3.3",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.49",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "tailwindcss": "^3.4.15",
-    "typescript": "^5.6.3"
-  }
+    "private": true,
+    "type": "module",
+    "scripts": {
+        "format": "prettier --write ./"
+    },
+    "dependencies": {
+        "@inertiajs/react": "^1.2.0",
+        "@tailwindcss/container-queries": "^0.1.1",
+        "@tailwindcss/forms": "^0.5.9",
+        "@tailwindcss/typography": "^0.5.15",
+        "@types/react": "^18.3.12",
+        "@types/react-dom": "^18.3.1",
+        "@vitejs/plugin-react": "^4.3.3",
+        "autoprefixer": "^10.4.20",
+        "postcss": "^8.4.49",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
+        "tailwindcss": "^3.4.15",
+        "typescript": "^5.6.3"
+    },
+    "devDependencies": {
+        "prettier": "^3.3.3",
+        "prettier-plugin-organize-imports": "^4.1.0",
+        "prettier-plugin-tailwindcss": "^0.6.8",
+        "vite": "^5.4.11",
+        "vite-plugin-ruby": "^5.1.1"
+    }
 }
